implementación de buscador para usuarios

--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
@@ -421,5 +421,14 @@ border-radius: 5px;
 box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) !important;
   
   }
+  
+  	/*.v-margin-left   {padding-left:   15px;}
+    .v-margin-right  {padding-right:  15px;}
+    .v-margin-top    {padding-top:    10px;}
+    .v-margin-bottom {padding-bottom: 10px;}
+  */
+  .custom-margins{
+       margin-left: 10px;
+    }
 
 }
