--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/styles.css
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/styles.css
@@ -16718,6 +16718,22 @@ div.v-layout.v-horizontal.v-widget {
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important;
 }
 
+.dashboard .custom-margin-layout .v-margin-left {
+	padding-left: 15px;
+}
+
+.dashboard .custom-margin-layout .v-margin-right {
+	padding-right: 15px;
+}
+
+.dashboard .custom-margin-layout .v-margin-top {
+	padding-top: 10px;
+}
+
+.dashboard .custom-margin-layout .v-margin-bottom {
+	padding-bottom: 10px;
+}
+
 .dashboard .custom-margins {
 	margin-left: 10px;
 }
