desarrollo de modulo de proyectos

--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/styles.css
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/styles.css
@@ -1649,14 +1649,6 @@ div.v-layout.v-horizontal.v-widget {
 	}
 	}
 
-.dashboard {
-	@media screen and (max-width: 480px) {
-	.notifications.v-window {
-		right: 11px;
-	}
-}
-}
-
 .dashboard.v-app, .dashboard.v-app-loading {
 	font: 400 15px/1.55 "Open Sans", sans-serif;
 	color: #464646;
@@ -15408,703 +15400,6 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0;
 }
 
-.dashboard .loginview {
-	background-color: #fafafa;
-	background-image: -webkit-radial-gradient(50% 50%, circle, #f5f5f5, #e1e1e1);
-	background-image: radial-gradient(  circle at 50% 50%, #f5f5f5, #e1e1e1);
-	padding-top: 0 !important;
-	-webkit-animation: valo-animate-in-fade 300ms 10ms backwards;
-	-moz-animation: valo-animate-in-fade 300ms 10ms backwards;
-	animation: valo-animate-in-fade 300ms 10ms backwards;
-}
-
-.dashboard .loginview  > .v-loading-indicator {
-	display: none !important;
-}
-
-.dashboard .login-panel {
-	background: white;
-	color: #474747;
-	border-radius: 4px;
-	border: 1px solid #d5d5d5;
-	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
-	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
-	padding: 21px 21px;
-	min-width: 195px;
-	max-width: 90%;
-	-webkit-animation: valo-animate-in-slide-up 800ms 10ms backwards, valo-animate-in-fade 600ms 100ms backwards;
-	-moz-animation: valo-animate-in-slide-up 800ms 10ms backwards, valo-animate-in-fade 600ms 100ms backwards;
-	animation: valo-animate-in-slide-up 800ms 10ms backwards, valo-animate-in-fade 600ms 100ms backwards;
-}
-
-.dashboard .login-panel  > .v-spacing {
-	height: 16px;
-}
-
-.dashboard .login-panel .labels {
-	display: block;
-}
-
-.dashboard .login-panel .labels .h4 {
-	margin: 0;
-	vertical-align: baseline;
-}
-
-.dashboard .login-panel .labels .h3 {
-	margin: 0;
-	float: right;
-}
-
-.dashboard .login-panel .fields .v-icon {
-	opacity: 0.3;
-}
-
-.dashboard .login-panel[width-range~="0-448px"] .labels .h3 {
-	float: none;
-	display: block;
-	margin-top: 0.2em;
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-
-.dashboard .login-panel[width-range~="0-448px"] .fields {
-	display: block;
-}
-
-.dashboard .login-panel[width-range~="0-448px"] .fields .v-slot {
-	display: block;
-}
-
-.dashboard .login-panel[width-range~="0-448px"] .fields .v-slot .v-widget {
-	width: 100%;
-}
-
-.dashboard .v-ui[width-range~="0-800px"] .login-panel {
-	-webkit-animation: animate-in-scale-up 500ms 10ms backwards, valo-animate-in-fade 300ms 100ms backwards;
-	-moz-animation: animate-in-scale-up 500ms 10ms backwards, valo-animate-in-fade 300ms 100ms backwards;
-	animation: animate-in-scale-up 500ms 10ms backwards, valo-animate-in-fade 300ms 100ms backwards;
-}
-
-.dashboard .login-help {
-	margin: 0 8px !important;
-}
-
-.dashboard .login-help.v-Notification-animate-in {
-	-webkit-animation: valo-animate-in-fade 500ms 1500ms backwards;
-	-moz-animation: valo-animate-in-fade 500ms 1500ms backwards;
-	animation: valo-animate-in-fade 500ms 1500ms backwards;
-}
-
-.dashboard .login-help p span {
-	display: block;
-	margin-top: 0.5em;
-}
-
-.dashboard .login-help p span a {
-	color: #fff;
-	text-decoration: none;
-	border-bottom: 1px solid #888;
-}
-
-.dashboard .dashboard-view.dashboard-view {
-	padding: 21px;
-	overflow: visible;
-}
-
-.dashboard .dashboard-view.dashboard-view .sparks {
-	background: white;
-	color: #474747;
-	border-radius: 4px;
-	border: 1px solid #d5d5d5;
-	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
-	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
-	margin-bottom: 7px;
-}
-
-.dashboard .dashboard-view.dashboard-view .sparks[width-range~="0-680px"] .spark {
-	width: 50%;
-}
-
-.dashboard .dashboard-view.dashboard-view .sparks[width-range~="0-680px"] .spark:nth-child(2n+1) {
-	border-left: none;
-}
-
-.dashboard .dashboard-view.dashboard-view .sparks[width-range~="0-680px"] .spark:nth-child(n+3) {
-	border-top: 1px solid #eaeaea;
-}
-
-.dashboard .dashboard-view.dashboard-view .sparks[width-range~="0-270px"] .spark {
-	width: 100%;
-	border-left: none;
-	border-top: 1px solid #eaeaea;
-}
-
-.dashboard .dashboard-view.dashboard-view .sparks[width-range~="0-270px"] .spark:first-child {
-	border-top: none;
-}
-
-.dashboard .dashboard-view.dashboard-view .spark {
-	float: left;
-	text-align: center;
-	width: 25%;
-	padding: 18px 18px;
-	border-left: 1px solid #eaeaea;
-	line-height: 1.35;
-}
-
-.dashboard .dashboard-view.dashboard-view .spark  > tbody {
-	display: inline-block;
-}
-
-.dashboard .dashboard-view.dashboard-view .spark:first-child {
-	border-left: none;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panel-toolbar {
-	padding: 1px 0 1px 18px;
-	height: 34px;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels {
-	display: block;
-	height: 100%;
-	margin: 0 -7px;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .card {
-	height: 100%;
-	overflow: hidden;
-	padding: 34px 11px 0;
-	position: relative;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .card .v-table, .dashboard .dashboard-view.dashboard-view .dashboard-panels .card .v-table-table {
-	background: transparent;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .top10-revenue .card {
-	padding-left: 0;
-	padding-right: 0;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .top10-revenue .v-table-table {
-	-webkit-box-shadow: none;
-	box-shadow: none;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .top10-revenue .v-table-cell-wrapper {
-	padding-left: 11px;
-	padding-right: 11px;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .top10-revenue .v-table-cell-content {
-	border-color: #eaeaea;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .top10-revenue .v-table-cell-content-rowheader {
-	color: #969696;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .top10-revenue .v-table-cell-content-rowheader .v-table-cell-wrapper {
-	padding-right: 0;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .dashboard-panel-slot {
-	padding: 7px;
-	min-height: 220px;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels[width-range~="0-700px"] .dashboard-panel-slot {
-	width: 100% !important;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels[width-range~="701px-"] .dashboard-panel-slot {
-	width: 50% !important;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels[height-range~="0-440px"] .dashboard-panel-slot {
-	height: 100%;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels[height-range~="441px-"] .dashboard-panel-slot {
-	height: 50%;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .dashboard-panel-slot.max {
-	width: 100% !important;
-	height: 100%;
-	padding-top: 0;
-	padding-bottom: 0;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .notes .card {
-	padding: 34px 0 0;
-}
-
-.dashboard .dashboard-view.dashboard-view .dashboard-panels .notes .v-textarea {
-	border-top: 1px solid #dfdfdf;
-	padding: 20px 20px 0;
-	line-height: 20px;
-	font-size: 13px;
-	background: #fffdf2 url(img/notes-bg.png) repeat;
-	background-attachment: local;
-	color: #545145;
-	overflow: auto;
-}
-
-.dashboard .dashboard-view[width-range~="0-480px"] {
-	padding-left: 11px;
-	padding-right: 11px;
-}
-
-.dashboard .notifications.v-window {
-	overflow: visible !important;
-	right: 21px;
-	left: auto !important;
-	max-width: 90%;
-	-webkit-transform-origin: 243px -7px;
-	-moz-transform-origin: 243px -7px;
-	-ms-transform-origin: 243px -7px;
-	-o-transform-origin: 243px -7px;
-	transform-origin: 243px -7px;
-}
-
-.dashboard .notifications.v-window.v-window-animate-in {
-	-webkit-animation: animate-in-scale-up 260ms cubic-bezier(0.68, 0.37, 0.51, 1.37);
-	-moz-animation: animate-in-scale-up 260ms cubic-bezier(0.68, 0.37, 0.51, 1.37);
-	animation: animate-in-scale-up 260ms cubic-bezier(0.68, 0.37, 0.51, 1.37);
-}
-
-.dashboard .notifications.v-window:before, .dashboard .notifications.v-window:after {
-	content: "";
-	position: absolute;
-	top: -14px;
-	right: 53px;
-	border: 7px solid transparent;
-	width: 0;
-	height: 0;
-	border-bottom-color: white;
-}
-
-.dashboard .notifications.v-window:before {
-	top: -17px;
-	margin-right: -1px;
-	border-width: 8px;
-	border-bottom-width: 8px;
-	border-bottom-color: rgba(0, 0, 0, 0.09098);
-}
-
-.dashboard .notifications.v-window .v-window-header {
-	color: #60a0ea;
-}
-
-.dashboard .notifications.v-window .v-window-outerheader:after, .dashboard .notifications.v-window .v-scrollable:before {
-	display: none;
-}
-
-.dashboard .notifications.v-window .notification-item {
-	font-size: 14px;
-}
-
-.dashboard .notifications.v-window .notification-title {
-	font-weight: 600;
-}
-
-.dashboard .notifications.v-window .notification-time {
-	font-size: 12px;
-	color: gray;
-}
-
-.dashboard .schedule .v-calendar-event-content {
-	background-repeat: repeat-x, no-repeat;
-	background-size: auto, cover;
-	border: 1px solid #000;
-	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.1);
-	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.1);
-}
-
-.dashboard .schedule .v-calendar-event-caption {
-	right: 0;
-	width: auto;
-	font-size: 12px;
-	font-weight: 600;
-	color: #fff;
-	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-}
-
-.dashboard .schedule .v-calendar-event-caption span {
-	color: #979699;
-}
-
-.dashboard .schedule .v-calendar-header-day {
-	font-weight: 600;
-	font-size: 0.8em;
-	text-transform: uppercase;
-	color: #60a0ea;
-}
-
-.dashboard .schedule .tray {
-	position: relative;
-	padding: 11px 21px;
-	background: white;
-	border-top: 1px solid #c5c5c5;
-	-webkit-transition: -webkit-transform 400ms 120ms;
-	-ms-transition: -ms-transform 400ms 120ms;
-	transition: transform 400ms 120ms;
-}
-
-.dashboard .schedule .tray.v-animate-reveal {
-	-ms-transform: translateY(-100%);
-	-webkit-transform: translateY(-100%);
-	transform: translateY(-100%);
-}
-
-.dashboard .schedule .catalog {
-	padding: 21px;
-}
-
-.dashboard .schedule .catalog .frame {
-	cursor: pointer;
-}
-
-.dashboard .schedule .catalog .frame .v-image {
-	-webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-	border-radius: 2px;
-	border: 2px solid rgba(255, 255, 255, 0.1);
-}
-
-.dashboard .schedule .catalog .frame:hover .v-image {
-	border-color: #60a0ea;
-}
-
-.dashboard .schedule .catalog .frame .v-label {
-	font-size: 13px;
-	line-height: 1.2;
-	margin: 0.5em 0 1em;
-}
-
-.dashboard .sales .viewheader {
-	padding: 21px;
-}
-
-.dashboard .sales .v-timeline:focus {
-	outline: none;
-}
-
-.dashboard .sales .v-timeline-widget-modelegend {
-	background: transparent;
-	width: 100% !important;
-	font-size: 12px;
-}
-
-.dashboard .sales .v-timeline-widget-display .gwt-HTML {
-	left: 0 !important;
-	width: 100%;
-	text-align: center;
-	top: 40% !important;
-	margin-top: -0.5em;
-}
-
-.dashboard .sales .v-timeline-widget-display-bottombar {
-	background: transparent;
-}
-
-.dashboard .sales .v-timeline-widget-legend {
-	margin-top: 0;
-}
-
-.dashboard .sales .v-timeline-widget-legend-value {
-	font-size: 10px;
-	color: #979699;
-}
-
-.dashboard .sales .v-timeline-widget-legend-label {
-	font-size: 13px;
-}
-
-.dashboard .sales .v-timeline-widget-display-hscale, .dashboard .sales .v-timeline-widget-display-hscale-left {
-	font-size: 11px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: 0 3px;
-	border-color: #ccc;
-}
-
-.dashboard .sales .v-timeline-widget-browser-scale-label {
-	color: rgba(0, 0, 0, 0.7);
-	font-size: 11px;
-	top: auto !important;
-	bottom: 14px;
-}
-
-.dashboard .transactions .viewheader {
-	padding: 21px;
-	border-bottom: 1px solid #dfdfdf;
-}
-
-.dashboard .reports .create .v-slot {
-	border: 1px solid rgba(122, 122, 122, 0.1);
-	background: rgba(122, 122, 122, 0.04);
-}
-
-.dashboard .reports .draft-thumb {
-	cursor: pointer;
-	position: relative;
-}
-
-.dashboard .reports .draft-thumb .v-label {
-	display: block;
-	text-align: center;
-}
-
-.dashboard .reports .draft-thumb .v-label span {
-	font-size: 0.8em;
-}
-
-.dashboard .reports .draft-thumb .v-image {
-	-webkit-box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.5);
-	box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.5);
-}
-
-.dashboard .reports .draft-thumb .v-image:hover {
-	outline: 2px solid #5198df;
-}
-
-.dashboard .reports .v-slot-palette {
-	background-color: #fafafa;
-	background-image: -webkit-linear-gradient(top, #fafafa 2%, #efefef 98%);
-	background-image: linear-gradient(to bottom,#fafafa 2%, #efefef 98%);
-	border-bottom: 1px solid #c5c5c5;
-}
-
-.dashboard .reports .palette {
-	padding: 0.5em 0;
-	font-size: 0.9em;
-}
-
-.dashboard .reports .palette .v-icon {
-	display: block;
-	text-align: center;
-}
-
-.dashboard .reports .palette .v-label {
-	font-size: 0.9em;
-	margin: 0 0.4em;
-	cursor: move;
-}
-
-.dashboard .reports .v-caption-palette {
-	font-size: 12px;
-	display: block;
-	white-space: normal;
-	padding-top: 1em;
-	width: 140px;
-}
-
-.dashboard .reports .v-slot-canvas {
-	overflow: auto;
-}
-
-.dashboard .reports .canvas {
-	padding: 21px;
-}
-
-.dashboard .reports .canvas .title {
-	font-size: 24px;
-	font-weight: 600;
-	border: 1px solid transparent;
-	color: #404346;
-	-webkit-box-shadow: none;
-	box-shadow: none;
-	width: 100%;
-	text-align: center;
-	cursor: pointer;
-	margin-bottom: 1cm;
-}
-
-.dashboard .reports .palette .v-image {
-	width: 75px;
-	height: 47px;
-}
-
-.dashboard .canvas-layout {
-	min-height: 29cm;
-	background: #fff;
-	padding: 1.5cm;
-	-webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-}
-
-.dashboard .canvas-layout  > .v-slot > .v-widget {
-	-webkit-animation: valo-animate-in-fade 500ms 10ms backwards, animate-in-scale-up 300ms 10ms backwards;
-	-moz-animation: valo-animate-in-fade 500ms 10ms backwards, animate-in-scale-up 300ms 10ms backwards;
-	animation: valo-animate-in-fade 500ms 10ms backwards, animate-in-scale-up 300ms 10ms backwards;
-}
-
-.dashboard .canvas-layout  > .v-slot > .v-widget.title, .dashboard .canvas-layout  > .v-slot > .v-widget.placeholder {
-	-webkit-animation: none;
-	-moz-animation: none;
-	animation: none;
-}
-
-.dashboard .reports .canvas .title:hover {
-	background: #fff9e6;
-}
-
-.dashboard .reports .canvas .title:focus {
-	cursor: text;
-	border-color: #eee;
-	background: transparent;
-}
-
-.dashboard .reports .canvas .placeholder {
-	text-align: center;
-}
-
-.dashboard .reports .canvas .placeholder .v-label {
-	min-height: 10cm;
-	line-height: 5cm;
-	font-size: 18px;
-}
-
-.dashboard .reports .v-tabsheet-content {
-	background-color: #fafafa;
-	background-image: -webkit-linear-gradient(top, #fafafa 2%, #efefef 98%);
-	background-image: linear-gradient(to bottom,#fafafa 2%, #efefef 98%);
-}
-
-.dashboard .reports .v-timeline-widget-display-hscale-left {
-	font-size: 10px;
-	margin-top: -14px;
-	padding-left: 3px;
-}
-
-.dashboard .reports .canvas .v-ddwrapper {
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-.dashboard .reports .text-editor {
-	position: relative;
-	overflow: visible;
-}
-
-.dashboard .reports .text-editor:hover {
-	background: #fff9e6;
-}
-
-.dashboard .reports .text-editor.edit:hover {
-	background: transparent;
-}
-
-.dashboard .text-editor .v-button {
-	position: absolute;
-	top: 50%;
-	margin-top: -12px;
-	right: -20px;
-	display: none;
-}
-
-.dashboard .text-editor .v-button-wrap:before {
-	margin: 0 -0.3em;
-}
-
-.dashboard .text-editor:hover .v-button {
-	display: inline-block;
-}
-
-.dashboard .reports .text-editor.edit .v-button {
-	display: inline-block;
-	position: static;
-	margin-top: 3px;
-}
-
-.dashboard .delete-button {
-	width: 19px;
-	height: 19px;
-	border: 1px solid #a3a7ab;
-	border-radius: 2px;
-	background: #73767a;
-	color: #fff;
-	font: inherit;
-	font-size: 16px;
-	line-height: 1;
-	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
-	text-align: center;
-	cursor: default;
-	-webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.dashboard .delete-button:hover {
-	background: #4e5153;
-}
-
-.dashboard .delete-button:focus {
-	outline: none;
-}
-
-.dashboard .delete-button:active {
-	background: #3c3f40;
-}
-
-.dashboard .draft-thumb .delete-button {
-	position: absolute;
-	top: 1px;
-	right: 1px;
-	display: none;
-}
-
-.dashboard .draft-thumb:hover .delete-button {
-	display: block;
-}
-
-.dashboard .help-overlay.palette {
-	top: 200px !important;
-	left: 200px !important;
-}
-
-.dashboard .help-overlay.reorder {
-	margin-left: 200px !important;
-}
-
-.dashboard .reports .transaction {
-	position: relative;
-	float: left;
-	width: 47%;
-	margin-right: 2.5%;
-	margin-top: 10px;
-	overflow: hidden;
-	background: #eee;
-	border: 1px solid #e0e0e0;
-}
-
-.dashboard .reports .transaction .time, .dashboard .reports .transaction .seats {
-	font-size: 12px;
-	color: #9fa2a6;
-	position: absolute;
-	top: 5px;
-	left: 5px;
-	line-height: normal;
-}
-
-.dashboard .reports .transaction .movie-title {
-	font-size: 16px;
-	font-weight: 300;
-	white-space: normal;
-	padding: 40px 5px 5px;
-}
-
-.dashboard .reports .transaction .seats {
-	left: 60%;
-}
-
 .dashboard .valo-menu-title {
 	background-color: #19e11f;
 	background-image: -webkit-linear-gradient(top, #1b87e3 2%, #166ed5 98%);
@@ -16117,6 +15412,18 @@ div.v-layout.v-horizontal.v-widget {
 	background-image: linear, to bottom, #5491de 2%, #5491de 98%;
 	color: #ffffff;
 	box-shadow: inset 0 1px 0 #5491de, inset 0 -1px 0 #5491de;
+}
+
+.dashboard .v-panel-proyecto-integrador .v-panel {
+	padding-bottom: 5px;
+}
+
+.dashboard .v-panel-proyecto-integrador .v-panel-caption {
+	border-bottom: 1px solid #039615;
+	background-image: -webkit-linear-gradient(top, #039615 2%, #039615 98%);
+	background-image: linear, to bottom, #039615 2%, #039615 98%;
+	color: #ffffff;
+	box-shadow: inset 0 1px 0 #039615, inset 0 -1px 0 #039615;
 }
 
 .dashboard .v-window-closebox {
