--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
@@ -91,14 +91,22 @@ $valo-menu-background-color: #414B56;
 @mixin dashboard { 
   @include valo;
   @include dashboard-common;
-  @include dashboard-login-view;
+  /*@include dashboard-login-view;
   @include dashboard-dashboard-view;
   @include dashboard-schedule-view;
   @include dashboard-sales-view;
   @include dashboard-transactions-view;
-  @include dashboard-reports-view;
-  
-  .valo-menu-title{
+  @include dashboard-reports-view;*/
+ 
+/*.v-app-loading::before { PARA CAMBIAR EL SPINNER LOADING
+    width: 10px;
+    height: 40px;
+    background: url(img/lg.flask-loader.gif) no-repeat;
+    background-repeat:no-repeat;
+    background-position: center center;
+  } 
+    */
+.valo-menu-title{
           background-color: #19e11f;
     background-image: -webkit-linear-gradient(top, #1b87e3 2%, #166ed5 98%);
     background-image: linear-gradient(to bottom,#1be32a 2%, #16d51c 98%);
@@ -112,6 +120,19 @@ $valo-menu-background-color: #414B56;
     box-shadow: inset 0 1px 0 #5491de, inset 0 -1px 0 #5491de;
 }
 
+.v-panel-proyecto-integrador{
+.v-panel {
+	padding-bottom: 5px;
+}
+
+.v-panel-caption{
+    border-bottom: 1px solid #039615;
+    background-image: -webkit-linear-gradient(top, #039615 2%, #039615 98%);
+	background-image: linear-gradient(to bottom,#039615 2%, #039615 98%);
+    color: #ffffff;
+    box-shadow: inset 0 1px 0 #039615, inset 0 -1px 0 #039615;
+} 
+}
 
 .v-window-closebox{
 	color: #fff;
