desarrollo de trazabilidad

--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
@@ -444,8 +444,8 @@ box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) !importan
   }
   
  .custom-margin-layout{
-        .v-margin-left   {padding-left:   10px;}
-        .v-margin-right  {padding-right:  10px;}
+        .v-margin-left   {padding-left:   7px;}
+        .v-margin-right  {padding-right:  7px;}
         .v-margin-top    {padding-top:    5px;}
         .v-margin-bottom {padding-bottom: 5px;}
   }
@@ -453,4 +453,7 @@ box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) !importan
        margin-left: 10px;
     }
 
+.v-button-primary{
+	    min-width: 40px;
+}
 }
