--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
@@ -125,13 +125,13 @@ $valo-menu-background-color: #414B56;
 	padding-bottom: 5px;
 }
 
-.v-panel-caption{
+/*.v-panel-caption{
     border-bottom: 1px solid #039615;
     background-image: -webkit-linear-gradient(top, #039615 2%, #039615 98%);
 	background-image: linear-gradient(to bottom,#039615 2%, #039615 98%);
     color: #ffffff;
     box-shadow: inset 0 1px 0 #039615, inset 0 -1px 0 #039615;
-} 
+} */
 }
 
 .v-window-closebox{
@@ -456,4 +456,29 @@ box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) !importan
 .v-button-primary{
 	    min-width: 40px;
 }
+
+.v-avatar{
+	height: 50px;
+    width: 50px;
+    /*border: solid 1px #5555552e;*/
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 2px 3px 5px rgba(0,0,0,0.6);
+    -moz-box-shadow: 2px 3px 5px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,0.6);
+    -o-box-shadow: 2px 3px 5px rgba(0,0,0,0.6);
+}
+
+.v-label-esperando-revision{
+	background-color: #f8d99b;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+.v-label-revisado{
+	background-color: #a4f89b;
+	padding: 3px;
+	border-radius: 5px;
+}
+
 }
