--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
@@ -46,7 +46,7 @@ $login-info-width: 300px !default;
 $login-info-opacity: 0.7 !default;
 $login-background-color: #e1ede4 !default;
 // Get more background images from unsplash.com (remember to optimize the filesize)
-$login-background-image: "img/login-bg-FCM.png" !default;
+$login-background-image: "images/fondoLogin.jpg" !default;
 
 $editor-shadow: 0 0 10px 10px rgba(0,0,0,.1) !default;
 $editor-embed-background-color: darken($editor-background-color, 5%) !default;
@@ -156,8 +156,9 @@ $valo-menu-background-color: #414B56;
     @if $login-background-image {
       background-color: #ffffff;
       background-image: url(#{$login-background-image});
-      background-size: cover;
-      background-position: 100% 100%; 
+      background-size: auto;
+      background-repeat: no-repeat;
+      background-position: 100% 100%;  
     }
 
     width: 100%;
