--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/styles.css
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/styles.css
@@ -15436,8 +15436,9 @@ div.v-layout.v-horizontal.v-widget {
 .dashboard .login-screen {
 	background: #3b3f42;
 	background-color: #ffffff;
-	background-image: url(img/login-bg-FCM.png);
-	background-size: cover;
+	background-image: url(images/fondoLogin.jpg);
+	background-size: auto;
+	background-repeat: no-repeat;
 	background-position: 100% 100%;
 	width: 100%;
 	height: 100%;
