--- a/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
+++ b/sgtlab/src/main/webapp/VAADIN/themes/dashboard/dashboard.scss
@@ -134,6 +134,10 @@ $valo-menu-background-color: #414B56;
 } */
 }
 
+.v-button-qr{
+	top: -17px;
+}
+
 .v-window-closebox{
 	color: #fff;
 	background: #ff6363;
